[package]
name = "rc_event_queue"
authors = ["Andrey Diduh <tower120@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.2.2"
edition = "2018"
description = "VecDeque-like fast, unbounded, FIFO, concurent read-lock-free message queue."
repository = "https://github.com/tower120/rc_event_queue"
keywords = ["lock-free", "queue", "mpmc", "concurent", "message-queue"]
categories = ["data-structures", "concurrency"]
exclude = ["doc"]

[features]
double_buffering = []

[dependencies]
parking_lot = "0.11.2"
spin = "0.9.2"

[dev-dependencies]
itertools = "0.10.1"
criterion = "0.3.3"
compiletest_rs = { version = "0.7" }

[target.'cfg(loom)'.dev-dependencies]
loom = {git = "https://github.com/tokio-rs/loom.git", rev = "8e005a3fa1348e3d0e22d11d61a4988a8ae1bdd5"}

[[bench]]
name = "read_bench"
harness = false

[[bench]]
name = "read_empty_bench"
harness = false

[[bench]]
name = "write_bench"
harness = false

[[bench]]
name = "mt_read_bench"
harness = false

[[bench]]
name = "mt_read_write_bench"
harness = false